SigmaCodebackup3rdSep/objects/Currency__c.object
<CustomObject>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <externalId>true</externalId>
        <label>Currency Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>Name  + &apos; ( &apos; +  Currency_Code__c  + &apos; ) &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Default_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Symbol__c</fullName>
        <label>Symbol</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Currency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Default_Currency__c</columns>
        <columns>Symbol__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Currency_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>